--- a/modules/email-templates/controls/invitations/client/invitations.html
+++ b/modules/email-templates/controls/invitations/client/invitations.html
@@ -2,6 +2,7 @@
 <div class="view-title-container flex-row">
     <h1>Project Invitations</h1>
     <div class="actions">
+        <a class="btn btn-primary btn-sm" href ng-disabled="!taskInvitations.canSend()" ng-click="taskInvitations.sendInvitations()">Send</a>
         <tmpl-permissions-gear class="permission-btn" x-context="project" x-object="taskInvitations"></tmpl-permissions-gear>
     </div>
 </div>
@@ -79,11 +80,10 @@
     <!-- / RECIPIENTS -->
 
     <!-- FORM FOOTER -->
-    <div class="form-footer no-border clearfix">
+    <div class="form-footer no-border clearfix hidden">
         <a class="btn btn-primary" href ng-show="form.curTab === 'Recipients'" ng-click="form.curTab = 'Content'">Previous</a>
         <div class="pull-right">
             <a class="btn btn-primary" href ng-show="form.curTab === 'Content'" ng-click="form.curTab = 'Recipients'">Next</a>
-            <a class="btn btn-default" href ng-show="taskInvitations.canSend()" ng-click="taskInvitations.sendInvitations()">Send</a>
         </div>
     </div>
     <!-- / FORM FOOTER -->
