--- a/project.entry-ab9a1d0-left.html
+++ b/project.entry-ab9a1d0-left.html
@@ -14,11 +14,11 @@
 		
 		<!-- TABS -->
 		<ul class="nav nav-tabs" ng-init="form.curTab = 'Project Details'">
-			<li role="presentation" ng-class="{'active':form.curTab === 'Project Details'}" class="form-group" x-show-errors>
-				<a ng-click="form.curTab = 'Project Details'" title="Edit Project Details" name="detailsForm">Project Details</a>
+			<li role="presentation" ng-class="{'active':form.curTab === 'Project Details'}">
+				<a href ng-click="form.curTab = 'Project Details'" title="Edit Project Details">Project Details</a>
 			</li>
-			<li role="presentation" ng-class="{'active':form.curTab === 'Project Contacts'}" class="form-group" x-show-errors>
-				<a ng-click="form.curTab = 'Project Contacts'" title="Edit Project Contacts" name="contactsForm">Contacts</a>
+			<li role="presentation" ng-class="{'active':form.curTab === 'Project Contacts'}">
+				<a href ng-click="form.curTab = 'Project Contacts'" title="Edit Project Contacts">Contacts</a>
 			</li>
 
 			<!--
@@ -35,27 +35,25 @@
 
 		</ul><!-- / TABS -->
 
-		<div class="edit-project-form tab-pane active" ng-show="form.curTab === 'Project Details'" ng-form="detailsForm">
+		<div class="edit-project-form tab-pane active" ng-show="form.curTab === 'Project Details'">
 			<!-- PROJECT INFORMATION -->
 			<fieldset>
 				<legend>General Info</legend>
 				<div class="form-group" x-show-errors>
-					<label class="control-label" for="name">Project Name</label>
+					<label class="control-label" for="projectname">Project Name</label>
 					<input class="form-control" title="Project Name" id="name" name="projectname"
-						ng-model="project.name" required />
+						ng-model="project.name" required></input>
 				</div>
 				<div class="row">
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="type">Type</label>
 						<select class="form-control" title="Project Type" id="type" name="type"
 							ng-model="project.type"
-							ng-options="type for type in types" required></select>
+							ng-options="type as type for type in types" required></select>
 					</div>
-					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
+					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label" for="subtype">Sub-type</label>
-						<select class="form-control" title="Project Sub-type" id="subtype" name="subtype"
-							ng-model="project.sector"
-							ng-options="subType for subType in subTypes[project.type]" required></select>
+						<select class="form-control" title="Project Sub-type" id="subtype" name="subtype"></select>
 					</div>
 					<div class="col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="build">Nature of Project</label>
@@ -69,24 +67,24 @@
 					</div>
 				</div>
 				<div class="form-group" x-show-errors>
-					<label class="control-label" for="shortDesc">Project Description</label>
+					<label class="control-label" for="projectdesc">Project Description</label>
 					<textarea ui-tinymce rows="5" title="Project Description" id="shortDesc" name="projectdesc" rows="3"
 						ng-model="project.description" required></textarea>
 				</div>
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="region">Region</label>
-						<select class="form-control" if="region" id="region" name="region"
-						 	ng-model='project.region'
+						<select class="form-control" if="region" name="region"
+						 	ng-model='project.region' 
 							ng-options="key as value for (key, value) in regions" required></select>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label">Latitude / Longitude</label>
 						<div class="coord-input flex-row">
 							<input class="form-control" id="latitude" type="number" step="any" name="latitude"
-								ng-model="project.lat" required />
+								ng-model="project.lat" required></input>
 							<input class="form-control" id="longitude" type="number" step="any" name="longitude"
-								ng-model="project.lon" required />
+								ng-model="project.lon" required></input>
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-4 form-group" x-show-errors>
@@ -104,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="ceaainvolvement">CEAA involvement</label>
-						<select class="form-control" name="ceaainvolvement" id="ceaainvolvement"
+						<select class="form-control" name="ceaainvolvement"
 							ng-model="project.CEAAInvolvement" required>
 							<option selected="selected" value="None">None</option>
 						</select>
@@ -113,8 +111,7 @@
 						<label class="control-label" for="ceaaurl">CEAA URL<em>(Optional)</em></label>
 						<input class="form-control" placeholder="e.g. http://www.website.com" type="url"
 							name="ceaaurl"
-							id="ceaaurl"
-							ng-model="project.CEAALink" />
+							ng-model="project.CEAALink"></input>
 					</div>
 				</div>
 			</fieldset>
@@ -129,14 +126,12 @@
 							<label class="control-label" for="capitalinvestment">Capital Investment</label>
 							<input class="form-control" step="any"
 								name="capitalinvestment"
-								id="capitalinvestment"
-								ng-model="project.intake.investment" />
+								ng-model="project.intake.investment"></input>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="capitalinvestmentnotes">Investment Notes<em>(Optional)</em></label>
 							<textarea class="form-control" rows="3"
-								name="capitalinvestmentnotes"
-								id="capitalinvestmentnotes"
+								name="capitalinvestmentnotes" 
 								ng-model="project.intake.investmentNotes"></textarea>
 						</div>
 					</div>
@@ -145,29 +140,26 @@
 							<label class="control-label" form="constructionjobs">Construction Jobs</label>
 							<input class="form-control"
 								name="constructionjobs"
-								ng-model="project.intake.constructionjobs" />
+								ng-model="project.intake.constructionjobs"></input>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="constructionjobsnotes">Construction Jobs Notes<em>(Optional)</em></label>
-							<textarea class="form-control" rows="3"
+							<textarea class="form-control" rows="3" 
 								name="constructionjobsnotes"
-								id="constructionjobsnotes"
 								ng-model="project.intake.constructionjobsNotes"></textarea>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="form-group">
 							<label class="control-label" for="operatingjobs">Operating Jobs</label>
-							<input class="form-control"
+							<input class="form-control" 
 								name="operatingjobs"
-								id="operatingjobs"
-								ng-model="project.intake.operatingjobs" />
+								ng-model="project.intake.operatingjobs"></input>
 						</div>
 						<div class="form-group">
 							<label class="control-label" for="operatingjobsnotes">Operating Jobs Notes<em>(Optional)</em></label>
 							<textarea class="form-control" rows="3"
 								name="operatingjobsnotes"
-								id="operatingjobsnotes"
 								ng-model="project.intake.operatingjobsNotes"></textarea>
 						</div>
 					</div>
@@ -183,15 +175,13 @@
 						<label class="control-label" for="fedelecdist">Federal Electoral Districts <em>(Optional)</em></label>
 						<input class="form-control"
 							name="fedelecdist"
-							id="fedelecdist"
-							ng-model="project.fedElecDist" />
+							ng-model="project.fedElecDist"></input>
 					</div>
 					<div class="col-md-6 form-group">
 						<label class="control-label" for="provelecdist">Provincial Electoral Districts <em>(Optional)</em></label>
 						<input class="form-control"
 							name="provelecdist"
-							id="provelecdist"
-							ng-model="project.provElecDist" />
+							ng-model="project.provElecDist"></input>
 					</div>
 				</div>
 			</fieldset>
@@ -239,24 +229,24 @@
 			<!-- / MEM ONLY INFORMATION -->
 		</div>
 
-		<div class="edit-project-form tab-pane" ng-show="form.curTab === 'Project Contacts'" ng-form="contactsForm">
+		<div class="edit-project-form tab-pane" ng-show="form.curTab === 'Project Contacts'">
 			<fieldset>
 				<legend>Executive Project Director</legend>
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="projectdirector">Name</label>
-						<input class="form-control" name="projectdirector" id="projectdirector"
-							ng-model="project.responsibleEPD" required />
+						<input class="form-control" name="projectdirector"
+							ng-model="project.responsibleEPD" required></input>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="projectdirectormmail">Email</label>
-						<input class="form-control" placeholder="example@domain.com" name="projectdirectormmail" id="projectdirectormmail"
-							ng-model="project.responsibleEPDEmail" required />
+						<input class="form-control" placeholder="example@domain.com" name="projectdirectormmail"
+							ng-model="project.responsibleEPDEmail" required></input>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="projectdirectorphone">Phone</label>
-						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectdirectorphone" id="projectdirectorphone"
-							ng-model="project.responsibleEPDPhone" required />
+						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectdirectorphone"
+							ng-model="project.responsibleEPDPhone" required></input>
 					</div>
 				</div>
 			</fieldset>
@@ -265,18 +255,18 @@
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="projectleadname">Name</label>
-						<input class="form-control" name="projectleadname" id="projectleadname"
-							ng-model="project.projectLead" required />
+						<input class="form-control" name="projectleadname"
+							ng-model="project.projectLead" required></input>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="projectleademail">Email</label>
-						<input class="form-control" placeholder="example@domain.com" name="projectleademail" id="projectleademail"
-							ng-model="project.projectLeadEmail" required />
+						<input class="form-control" placeholder="example@domain.com" name="projectleademail"
+							ng-model="project.projectLeadEmail" required></input>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="projectleadphone">Phone</label>
-						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectleadphone" id="projectleadphone"
-							ng-model="project.projectLeadPhone" required />
+						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectleadphone"
+							ng-model="project.projectLeadPhone" required></input>
 					</div>
 				</div>
 			</fieldset>
@@ -285,18 +275,18 @@
 				<div class="row">
 					<div class="col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="celead">Name</label>
-						<input class="form-control" name="celead" id="celead"
-							ng-model="project.CELead" required />
+						<input class="form-control" name="celead"
+							ng-model="project.CELead" required></input>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label" for="celeademail">Email</label>
-						<input class="form-control" placeholder="example@domain.com" name="celeademail" id="celeademail"
-							ng-model="project.CELeadEmail" required />
+						<input class="form-control" placeholder="example@domain.com" name="celeademail"
+							ng-model="project.CELeadEmail" required></input>
 					</div>
 					<div class="col-sm-6 col-md-4 form-group" x-show-errors>
 						<label class="control-label">Phone</label>
 						<input class="form-control" placeholder="e.g. (555) 555-5555" name="cephone"
-							ng-model="project.CELeadPhone" required />
+							ng-model="project.CELeadPhone" required></input>
 					</div>
 				</div>
 			</fieldset>
@@ -305,24 +295,24 @@
 				<div class="row">
 					<div class="col-md-4 form-group">
 						<label class="control-label" for="analyst">Analyst<em>(Optional)</em></label>
-						<input class="form-control" name="analyst" id="analyst"
-							ng-model="project.projectAnalyst" />
+						<input class="form-control" name="analyst"
+							ng-model="project.projectAnalyst"></input>
 					</div>
 					<div class="col-md-4 form-group">
 						<label class="control-label" for="assistant">Assistant<em>(Optional)</em></label>
-						<input class="form-control" name="assistant" id="assistant"
-							ng-model="project.projectAssistant" />
+						<input class="form-control" name="assistant"
+							ng-model="project.projectAssistant"></input>
 					</div>
 					<div class="col-md-4 form-group">
 						<label class="control-label" for="adminassistant">Admin Assistant<em>(Optional)</em></label>
-						<input class="form-control" name="adminassistant" id="adminassistant"
-							ng-model="project.administrativeAssistant" />
+						<input class="form-control" name="adminassistant"
+							ng-model="project.administrativeAssistant"></input>
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="control-label" for="teamnotes">Team Notes<em>(Optional)</em></label>
 					<textarea class="form-control" rows="4"
-						name="teamnotes" id="teamnotes"
+						name="teamnotes"
 						ng-model="project.teamNotes"></textarea>
 				</div>
 			</fieldset>
@@ -358,14 +348,14 @@
 				<div class="row">
 					<div class="col-md-12 form-group">
 						<label class="control-label" for="eanotes">Assessment Notes<em>(Optional)</em></label>
-						<textarea class="form-control" name="eanotes" id="eanotes" rows="4"
+						<textarea class="form-control" name="eanotes" rows="4"
 							ng-model="project.eaNotes"></textarea>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12 form-group">
 						<label class="control-label" for="eaissues">Assessment Issues<em>(Optional)</em></label>
-						<textarea class="form-control" name="eaissues" id="eaissues" rows="4"
+						<textarea class="form-control" name="eaissues" rows="4"
 							ng-model="project.eaIssues"></textarea>
 					</div>
 				</div>
