Standardized naming conventions across various pages/views

--- a/modules/email-templates/controls/invitations/client/invitations.html
+++ b/modules/email-templates/controls/invitations/client/invitations.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-    <h1>Project Invitations</h1>
+    <h1>Invitations</h1>
     <div class="actions">
         <a class="btn btn-primary btn-sm" href ng-disabled="!taskInvitations.canSend()" ng-click="taskInvitations.sendInvitations()">Send</a>
         <tmpl-permissions-gear class="permission-btn" x-context="project" x-object="taskInvitations"></tmpl-permissions-gear>
